fixed gaps

--- a/src/components/Leftside.css
+++ b/src/components/Leftside.css
@@ -1,11 +1,11 @@
 .leftside {
-    height: 90%;
+    height: 100%;
     width: 400px;
     background-color: #C0DCF3;
 }
 
 .tabs {
-    height: 5%;
+    height: 40px;
     width: 400px;
     display: flex;
     background-color: white;
