--- a/src/components/Tab.css
+++ b/src/components/Tab.css
@@ -5,8 +5,9 @@
 }
 
 .buttontab {
-    width: 200px;
-    padding: 5px;
+    width: 100%;
+    height: 100%;
+    padding: 0px;
     font-size: 20px;
     border-style: none;
 }
